<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >




    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reveal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.PagerTabStrip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:textColor="?attr/baslikText"

            />


    </android.support.v4.view.ViewPager>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:id="@+id/reveal"
        android:visibility="gone"
      android:layout_alignParentBottom="true"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sol"
            android:background="@drawable/sola"
            android:layout_marginStart="80dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/ilksayfa"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/copubosalt"
            android:background="@drawable/copbosalt"
            android:contentDescription="@string/copbosalt"
            android:layout_centerHorizontal="true"
            />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/saga"
            android:layout_marginEnd="80dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/sag"
            android:contentDescription="@string/sonsayfa"
            />



    </RelativeLayout>


</RelativeLayout>