<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/koordinat2"
    android:fitsSystemWindows="false"

   >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center"
                android:id="@+id/basliktextviewi"
                android:textColor="@android:color/white"
                />
            <include layout="@layout/autocomplete"
                android:visibility="visible"
                android:id="@+id/aramalayout"
                />




        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/video"
        android:id="@+id/videobuton"
        android:visibility="invisible"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"

        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/sayfaci"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:background="@android:color/black"
            android:visibility="gone"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:id="@+id/sol"
                android:background="@drawable/sola"
                android:contentDescription="@string/ilksayfa"
                />


            <!--  ekşin gibi sayfa sayacı arka planı için
                   android:paddingStart="5dp"
                android:paddingEnd="5dp"
                 android:background="@drawable/sayfagosterge_arkaplan" -->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gosterge"
                android:layout_centerInParent="true"

                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/textt"
                android:text="@string/bir"
                android:paddingTop="9dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/maxtext"
                android:textSize="12sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_toEndOf="@id/textt"
                android:paddingTop="9dp"
                />

            </RelativeLayout>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/saga"
                android:layout_alignParentEnd="true"
                android:id="@+id/sag"
                android:contentDescription="@string/sonsayfa"
                />






        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            />
    </LinearLayout>




</android.support.design.widget.CoordinatorLayout>
